rem & corrected scrollbar issue

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,6 +21,7 @@
 html {
     /* font-size: 16px; */
     font-family: sans-serif;
+    font-size: 62.5%;
 }
 
 /* Set the default background color */
@@ -76,8 +77,6 @@ body,
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
-    font: inherit;
     vertical-align: baseline;
 }
 
@@ -133,41 +132,40 @@ table {
     --tertiary: #FADCD9;
 }
 
-.main-Wrapper{
+.main-wrapper{
     display: flex;
-    flex-direction: column;
 }
 .main-content{
-    margin-left: 200px;
+    margin-left: 20rem;
     width: 100%;
     .section{
         &_content{
-            margin: 10px;
+            margin: 1rem;
             &_card{
                 max-width: 100%;
-                padding: 20px;
-                border: 1px solid var(--primary);
-                margin: 20px 10px;
-                box-shadow: 8px 8px 5px #ad7f8afc;
+                padding: 2rem;
+                border: 0.1rem solid var(--primary);
+                margin: 2rem 1rem;
+                box-shadow: 0.8rem 0.8rem 0.5rem #ad7f8afc;
                 &_header{
-                    font-size: 36px;
+                    font-size: 3.6rem;
                     color: var(--primary);
                 }
                 .card_content_wrapper{
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: flex-start;
-                    gap: 80px;
-                    margin: 25px 0;
+                    gap: 8rem;
+                    margin: 2.5rem 0;
                 }
                 &_block{
                     display: flex;
                     width: max-content;
                     flex-direction: column;
-                    margin: 15px;
+                    margin: 1.5rem;
                     .description{
                         text-align: center;
-                        margin-top: 10px;
+                        margin-top: 1rem;
                     }
                 }
             }
@@ -181,7 +179,7 @@ table {
     left:0;
     top:0;
     bottom: 0;
-    width: 200px;
+    width: 20rem;
     color: #333;
 }
 
@@ -189,34 +187,35 @@ table {
     width: max-content;
     height: auto;
     border-radius: 50%;
-    margin: 30px;
+    margin: 3rem;
     .img{
         border-radius: 50%;
-        border: 2px solid pink;
+        border: 0.2rem solid pink;
         object-fit: cover;
     }
 }
 
 .navigation-section{
-    margin: 30px;
+    margin: 3rem;
 }
 
 .nav-list{
-    margin: 10px 0;
+    margin: 1rem 0;
     text-align: left;
     transition: all 0.3s ease-in;
     &.active{
-        border-left: 4px solid var(--primary);
+        border-left: 0.4rem solid var(--primary);
         font-weight: bold;
     }
     .section{
-        padding: 8px;
-        margin: 10px 0;
+        padding: 0.8rem;
+        margin: 1rem 0;
         display: inline-block;
         color: var(--primary);
         &_name{
-            padding: 8px;
+            padding: 0.8rem;
             color: var(--secondary);
+            font-size: 1.4rem;
         }
     }
    
@@ -236,9 +235,9 @@ table {
 
 .section-header{
     font-weight: 200;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
     margin-top: 0;
-    padding: 30px 40px;
+    padding: 3rem 4rem;
     text-transform: uppercase;
     font-size: 2.92rem;
     line-height: 3.212rem;
